# Telegram_PM_forward_bot

./: CMakeLists.txt  README.md  bot_config.ini  telegram_forward_bot.cpp
